Lua/Android-LOVE/love/build/intermediates/cxx/Release/6h5345s3/logs/arm64-v8a/build_stderr_targets.txt
C:/Users/makpu/Downloads/proj/Projects/Lua/Android-LOVE/love/src/jni/love/src/modules/graphics/wrap_ParticleSystem.cpp:68:6: error: use of dynamic_cast requires -frtti
        if (dynamic_cast<Image *>(tex) != nullptr)
            ^
C:/Users/makpu/Downloads/proj/Projects/Lua/Android-LOVE/love/src/jni/love/src/modules/graphics/wrap_ParticleSystem.cpp:70:11: error: use of dynamic_cast requires -frtti
        else if (dynamic_cast<Canvas *>(tex) != nullptr)
                 ^
C:/Users/makpu/Downloads/proj/Projects/Lua/Android-LOVE/love/src/jni/love/src/modules/image/ImageData.cpp:132:19: error: use of dynamic_cast requires -frtti
                auto filedata = dynamic_cast<filesystem::FileData *>(data);
                                ^
C:/Users/makpu/Downloads/proj/Projects/Lua/Android-LOVE/love/src/jni/love/src/modules/graphics/wrap_Mesh.cpp:512:6: error: use of dynamic_cast requires -frtti
        if (dynamic_cast<Image *>(tex) != nullptr)
            ^
C:/Users/makpu/Downloads/proj/Projects/Lua/Android-LOVE/love/src/jni/love/src/modules/graphics/wrap_Mesh.cpp:514:11: error: use of dynamic_cast requires -frtti
        else if (dynamic_cast<Canvas *>(tex) != nullptr)
                 ^
2 errors generated.
make: *** [C:/Users/makpu/AppData/Local/Android/Sdk/ndk/23.2.8568313/build//../build/core/build-binary.mk:478: C:\Users\makpu\Downloads\proj\Projects\Lua\Android-LOVE\love\build\intermediates\cxx\Release\6h5345s3/obj/local/arm64-v8a/objs/love/src/modules/graphics/wrap_ParticleSystem.o] Error 1
make: *** Waiting for unfinished jobs....
1 error generated.
make: *** [C:/Users/makpu/AppData/Local/Android/Sdk/ndk/23.2.8568313/build//../build/core/build-binary.mk:478: C:\Users\makpu\Downloads\proj\Projects\Lua\Android-LOVE\love\build\intermediates\cxx\Release\6h5345s3/obj/local/arm64-v8a/objs/love/src/modules/image/ImageData.o] Error 1
2 errors generated.
make: *** [C:/Users/makpu/AppData/Local/Android/Sdk/ndk/23.2.8568313/build//../build/core/build-binary.mk:478: C:\Users\makpu\Downloads\proj\Projects\Lua\Android-LOVE\love\build\intermediates\cxx\Release\6h5345s3/obj/local/arm64-v8a/objs/love/src/modules/graphics/wrap_Mesh.o] Error 1
C:/Users/makpu/Downloads/proj/Projects/Lua/Android-LOVE/love/src/jni/love/src/modules/graphics/wrap_SpriteBatch.cpp:159:6: error: use of dynamic_cast requires -frtti
        if (dynamic_cast<Image *>(tex) != nullptr)
            ^
C:/Users/makpu/Downloads/proj/Projects/Lua/Android-LOVE/love/src/jni/love/src/modules/graphics/wrap_SpriteBatch.cpp:161:11: error: use of dynamic_cast requires -frtti
        else if (dynamic_cast<Canvas *>(tex) != nullptr)
                 ^
2 errors generated.
make: *** [C:/Users/makpu/AppData/Local/Android/Sdk/ndk/23.2.8568313/build//../build/core/build-binary.mk:478: C:\Users\makpu\Downloads\proj\Projects\Lua\Android-LOVE\love\build\intermediates\cxx\Release\6h5345s3/obj/local/arm64-v8a/objs/love/src/modules/graphics/wrap_SpriteBatch.o] Error 1
C:/Users/makpu/Downloads/proj/Projects/Lua/Android-LOVE/love/src/jni/love/src/modules/graphics/Image.cpp:117:31: error: use of dynamic_cast requires -frtti
        love::image::ImageData *id = dynamic_cast<love::image::ImageData *>(d);
                                     ^
1 error generated.
make: *** [C:/Users/makpu/AppData/Local/Android/Sdk/ndk/23.2.8568313/build//../build/core/build-binary.mk:478: C:\Users\makpu\Downloads\proj\Projects\Lua\Android-LOVE\love\build\intermediates\cxx\Release\6h5345s3/obj/local/arm64-v8a/objs/love/src/modules/graphics/Image.o] Error 1
C:/Users/makpu/Downloads/proj/Projects/Lua/Android-LOVE/love/src/jni/love/src/modules/joystick/sdl/Joystick.cpp:460:23: warning: implicit conversion from 'std::numeric_limits<unsigned int>::type' (aka 'unsigned int') to 'float' changes value from 4294967295 to 4294967296 [-Wimplicit-const-int-float-conversion]
                float maxduration = std::numeric_limits<Uint32>::max() / 1000.0f;
                                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ~
C:/Users/makpu/Downloads/proj/Projects/Lua/Android-LOVE/love/src/jni/love/src/modules/graphics/wrap_Graphics.cpp:683:12: error: use of dynamic_cast requires -frtti
        auto fd = dynamic_cast<love::filesystem::FileData *>(d);
                  ^
C:/Users/makpu/Downloads/proj/Projects/Lua/Android-LOVE/love/src/jni/love/src/modules/graphics/opengl/Shader.cpp:263:19: error: use of dynamic_cast requires -frtti
                                Volatile *v = dynamic_cast<Volatile *>(u.textures[i]);
                                              ^
1 error generated.
make: *** [C:/Users/makpu/AppData/Local/Android/Sdk/ndk/23.2.8568313/build//../build/core/build-binary.mk:478: C:\Users\makpu\Downloads\proj\Projects\Lua\Android-LOVE\love\build\intermediates\cxx\Release\6h5345s3/obj/local/arm64-v8a/objs/love/src/modules/graphics/wrap_Graphics.o] Error 1
1 warning generated.
1 error generated.
make: *** [C:/Users/makpu/AppData/Local/Android/Sdk/ndk/23.2.8568313/build//../build/core/build-binary.mk:478: C:\Users\makpu\Downloads\proj\Projects\Lua\Android-LOVE\love\build\intermediates\cxx\Release\6h5345s3/obj/local/arm64-v8a/objs/love/src/modules/graphics/opengl/Shader.o] Error 1
